--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node  node_modules/jest/bin/jest.js",
     "start": "npx webpack-dev-server --mode development"
   },
   "keywords": [],
@@ -13,10 +13,11 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
+    "babel-jest": "^23.6.0",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
@@ -26,6 +27,9 @@
     "babel-preset-stage-3": "^6.24.1",
     "css-loader": "^0.28.11",
     "file-loader": "^2.0.0",
+    "jasmine": "3.3.1",
+    "jest": "23.6.0",
+    "redux-mock-store": "^1.5.3",
     "style-loader": "^0.21.0",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.8",
